@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.openidentityplatform.opendj</groupId>
     <artifactId>opendj-parent</artifactId>
-    <version>4.5.5-SNAPSHOT</version>
+    <version>4.5.6-SNAPSHOT</version>
   </parent>
   <artifactId>opendj-server-legacy</artifactId>
   <packaging>jar</packaging>
@@ -70,11 +70,6 @@
   </properties>
 
   <dependencies>
-    <!-- ForgeRock libraries -->
-    <dependency>
-      <groupId>org.openidentityplatform.opendj</groupId>
-      <artifactId>opendj-cli</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.openidentityplatform.opendj</groupId>
@@ -89,6 +84,16 @@
     <dependency>
       <groupId>org.openidentityplatform.opendj</groupId>
       <artifactId>opendj-config</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.openidentityplatform.opendj</groupId>
+      <artifactId>opendj-cli</artifactId>
+    </dependency>
+    
+     <dependency>
+      <groupId>org.openidentityplatform.opendj</groupId>
+      <artifactId>opendj-legacy</artifactId>
     </dependency>
 
     <dependency>
@@ -520,12 +525,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
-          <!-- Run inherited 'parse-version' execution to generate properties (major.version, minor.version, ...) -->
-
-          <!-- Take into account several sources directories for the build -->
           <execution>
             <id>main-java-sources</id>
-            <phase>generate-sources</phase>
+            <phase>process-sources</phase>
             <goals>
               <goal>add-source</goal>
             </goals>
@@ -535,7 +537,7 @@
                 <source>src/messages/src</source>
                 <source>src/build-tools</source>
                 <source>${project.build.directory}/java-stubs</source>
-                <source>../opendj-legacy/src/main/java</source>
+<!--                <source>../opendj-legacy/src/main/java</source>-->
               </sources>
             </configuration>
           </execution>
@@ -1156,9 +1158,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
-            	<classpathDependencyExcludes>
-	            	<classpathDependencyExcludes>org.slf4j:slf4j-jdk14</classpathDependencyExcludes>
-	          	</classpathDependencyExcludes>
+<!--            	<classpathDependencyExcludes>-->
+<!--	            	<classpathDependencyExcludes>org.slf4j:slf4j-jdk14</classpathDependencyExcludes>-->
+<!--	          	</classpathDependencyExcludes>-->
             </configuration>
             <executions>
               <execution>
@@ -1167,8 +1169,13 @@
                   <goal>verify</goal>
                 </goals>
                 <configuration>
-                  <testSourceDirectory>src/test/java</testSourceDirectory>
-                  <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
+				  <additionalClasspathElements>
+		            <additionalClasspathElement>${project.build.directory}/jars/opendj-slf4j-adapter.jar</additionalClasspathElement>
+		          </additionalClasspathElements>
+				  <testSourceDirectory>src/test/java</testSourceDirectory>
+<!--				  <enableProcessChecker>all</enableProcessChecker>-->
+				  <forkedProcessTimeoutInSeconds>900</forkedProcessTimeoutInSeconds>
+                  <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                   <excludes>
                     <exclude>org/opends/server/snmp/**</exclude>
                     <exclude>org/opends/quicksetup/**</exclude>
@@ -1198,9 +1205,8 @@
                       <name>configfailurepolicy</name>
                       <value>skip</value>
                     </property>
-                    
-                  </properties>
-                  <systemPropertyVariables>
+                 </properties>
+                 <systemPropertyVariables>
                     <org.opends.server.BuildRoot>${basedir}</org.opends.server.BuildRoot>
                     <org.opends.server.BuildDir>${project.build.directory}</org.opends.server.BuildDir>
                     <org.opends.test.replicationDbImpl>LOG</org.opends.test.replicationDbImpl>
@@ -1210,9 +1216,12 @@
                     <org.opends.test.pauseOnFailure>false</org.opends.test.pauseOnFailure>
                     <org.opends.test.copyClassesToTestPackage>false</org.opends.test.copyClassesToTestPackage>
                   </systemPropertyVariables>
-                  <argLine>-server -Xmx2048M -XX:MaxPermSize=256m</argLine>
-	        	  <parallel>methods</parallel>
-	          	  <threadCount>1</threadCount>
+                  <argLine> -Xmx2g @{argLine}</argLine>
+	          	  <reuseForks>false</reuseForks>
+	          	  <forkCount>1</forkCount>
+	          	  <parallel>none</parallel>
+	          	  <runOrder>alphabetical</runOrder>
+	          	  <rerunFailingTestsCount>3</rerunFailingTestsCount>
                 </configuration>
               </execution>
             </executions>
@@ -1269,16 +1278,19 @@
               <!-- Add snmp source directory and snmp generated directory as sources -->
               <execution>
                 <id>snmp-java-sources</id>
-                <phase>generate-sources</phase>
+               <phase>process-sources</phase>
                 <goals>
                   <goal>add-source</goal>
                 </goals>
                 <configuration>
                   <sources>
-                    <source>src/snmp</source>
+                    <source>src/snmp/generated</source>
+                    <source>src/snmp/src</source>
+                     <source>src/snmp/resource</source>
                   </sources>
                 </configuration>
               </execution>
+             
             </executions>
           </plugin>
 
